# SDL-Mario

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Documentation.md  README.md  compile_commands.json  documentation.md
.clangd/index/: Animator.cpp.30056823D9CA8754.idx  Animator.hpp.DAC8B722F58B6F0B.idx  Game.cpp.0E3FE7B7459DC8EB.idx  Game.hpp.2C9393CCC037419C.idx  GameObject.cpp.A1BB6D21EA13C21A.idx  GameObject.hpp.D2EE50B254967877.idx  GraphicsComponent.hpp.17FE6C8E156515A9.idx  IMG.c.9BDDB6C901B57C2A.idx  IMG_WIC.c.493C9E7C979A41DF.idx  IMG_bmp.c.91ED99E1FF32CA99.idx  IMG_gif.c.6430D5242312DB02.idx  IMG_jpg.c.67239DDC8827BBF3.idx  IMG_lbm.c.B279B63263BBAB03.idx  IMG_pcx.c.E2C9A0DB2669AB93.idx  IMG_png.c.8E426518CE6B3411.idx  IMG_pnm.c.B9E33330C8F4A4ED.idx  IMG_svg.c.C9892570E9CEE006.idx  IMG_tga.c.B7899854C5EF3B0F.idx  IMG_tif.c.53CB31C5EBB34702.idx  IMG_webp.c.B97A526126484016.idx  IMG_xcf.c.A2955ADD39DAC50A.idx  IMG_xpm.c.13925B66AE3A80E3.idx  IMG_xv.c.10B05732C984AE8A.idx  IMG_xxx.c.BA5200C7C78452CF.idx  ImageRenderer.hpp.9AC8F370BB60CF67.idx  InputComponent.hpp.DC731B70D5EC85BF.idx  Level.cpp.D04B53BB6C53124D.idx  Level.hpp.EDCB4C23C07FEAF2.idx  Math.hpp.17BEE03F94966612.idx  NullInputComponent.hpp.DBD4F328EBE6DE17.idx  NullPhysicsComponent.hpp.304CED47747BAD0D.idx  PhysicsComponent.hpp.4B30420C90994F2B.idx  PlayerGraphicsComponent.cpp.5BE27C3E6BBDEB3E.idx  PlayerGraphicsComponent.hpp.C27D5C460972EB91.idx  PlayerInputComponent.cpp.02C21E15A0BFE35D.idx  PlayerInputComponent.hpp.FE42AD487B7120A4.idx  PlayerPhysicsComponent.cpp.2BE1A6B338873EC7.idx  PlayerPhysicsComponent.hpp.A3706E1F42DAB2F0.idx  SDL.c.E3D8B4CE70773410.idx  SDL.h.E754CBE4B86E67CD.idx  (+452 more)
.github/workflows/: cmake.yml
include/: Animator.hpp  Camera.hpp  Collidable.hpp  Command.hpp  File.hpp  Game.hpp  GameObject.hpp  GraphicsComponent.hpp  Ground.hpp  ImageRenderer.hpp  InputComponent.hpp  Level.hpp  Math.hpp  NullGraphicsComponent.hpp  NullInputComponent.hpp  NullPhysicsComponent.hpp  PhysicsComponent.hpp  Player.hpp  PlayerGraphicsComponent.hpp  PlayerInputComponent.hpp  PlayerPhysicsComponent.hpp  Renderable.hpp  ResourceFactory.hpp  StaticTileGraphicsComponent.hpp  Util.hpp  Vec2.hpp  Window.hpp
res/: textCoords.txt  textCoordsStatic.txt  w1-1.txt
src/: Animator.cpp  CMakeLists.txt  Camera.cpp  Command.cpp  File.cpp  Game.cpp  GameObject.cpp  Ground.cpp  Level.cpp  NullGraphicsComponent.cpp  NullInputComponent.cpp  NullPhysicsComponent.cpp  Player.cpp  PlayerGraphicsComponent.cpp  PlayerInputComponent.cpp  PlayerPhysicsComponent.cpp  ResourceFactory.cpp  StaticTileGraphicsComponent.cpp  Util.cpp  Window.cpp  main.cpp
tests/: CMakeLists.txt  FileTest.cpp  MainTests.cpp  MathTest.cpp  testFile.txt
